Fix toolbar styling visibility (#379)
* fix: long messages shouldn't overlap the formatting toolbar

* fix: resolve toolbar visibility when sending message or changing chats

--- a/src/ui/chat/components/FormattingToolbar.scss
+++ b/src/ui/chat/components/FormattingToolbar.scss
@@ -2,11 +2,6 @@
   .formatting-toolbar {
     display: flex;
     justify-content: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
     transition: opacity 800ms;
     opacity: 0;
 
